# __2026_05_09_chihlee_python__

./: CLAUDE.md  README.md  generate_names.py  pyproject.toml
05_09/: 2026_05_09_02.ipynb  2026_05_09_03.ipynb  2026_05_09_04.ipynb
05_16/: lesson1.py  lesson2.ipynb  lesson3.ipynb
05_23/: lesson1.ipynb  lesson3.py  lesson4.py
05_30/: lesson1.ipynb  lesson2.ipynb  lesson3.ipynb  lesson4.py  lesson6.py  lesson7.ipynb  lesson7_1.py  lesson8.ipynb  lesson8.py
06_06/: lesson2.py  lesson3.py
06_13/: lesson1.py  lesson1_1.ipynb  lesson3.ipynb  lesson3_1.ipynb  lesson4.py  lesson5.py
06_27/: lesson1.ipynb  lesson1.md  lesson1.py  lesson1_app.py  lesson2.ipynb  lesson2.md  lesson3.ipynb  lesson3.md  lesson3.py  lesson4.py  lesson5.py
07_04/: practice7.ipynb  practice8.ipynb  taiwan_stocks_close_2006_to_now.csv  taiwan_stocks_correlation.csv  taiwan_stocks_returns_2006_to_now.csv
07_04/.ipynb_checkpoints/: practice2-checkpoint.ipynb  practice3-checkpoint.ipynb  practice4-checkpoint.ipynb  practice5-checkpoint.ipynb  practice6-checkpoint.ipynb  practice8-checkpoint.ipynb
07_18/: practice1.ipynb  practice2.ipynb  practice3.ipynb  practice4.ipynb
link/: README.md
