[project]
name = "2026-05-09-chihlee-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basedpyright>=1.39.9",
    "jupyter>=1.1.1",
    "jupyterlab-lsp>=5.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
    "reportlab>=4.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "twstock>=1.5.1",
    "yfinance>=1.5.1",
]
